--- a/src/components/navbar/navbarStyles.css
+++ b/src/components/navbar/navbarStyles.css
@@ -18,7 +18,7 @@
 .logo {
 	font-weight: bold;
 	font-size: 20px;
-	color: blue;
+	color: blueviolet;
 	cursor: pointer;
 }
 
@@ -50,7 +50,7 @@
 }
 
 .topAvatar {
-	width: 30px;
+	width: 25px;
 	height: 30px;
 	border-radius: 50%;
 	cursor: pointer;
